kubernetes/apps/gke/api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api
  annotations:
    mesh.cloud.google.com/proxy: '{"managed": true}'
  labels:
    istio.io/rev: asm-managed
spec: {}
status: {}
