kubernetes/apps/gke/api/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  template:
    spec:
      containers:
        - name: istio-proxy
          image: auto
          resources:
            requests:
              cpu: 50m
              memory: 112Mi
          securityContext:
            allowPrivilegeEscalation: false
status: {}
