kubernetes/apps/gke/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: api
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  strategy: {}
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: northamerica-northeast1-docker.pkg.dev/pdcp-cloud-005-safeinputs/safeinputs/api:main-483cc15-1718720835 # {"$imagepolicy": "flux-system:api"}
          securityContext:
            # No new privs for process or it's children
            # https://github.com/kubernetes/design-proposals-archive/blob/main/auth/no-new-privs.md
            allowPrivilegeEscalation: false
          resources:
            requests:
              cpu: 200m
              memory: 100Mi
        - name: istio-proxy
          image: auto
          resources:
            requests:
              cpu: 100m
              memory: 112Mi
          securityContext:
            allowPrivilegeEscalation: false
status: {}
