kubernetes/apps/gke/api/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api-virtual-service
  namespace: api
spec:
  hosts:
    - '*'
  gateways:
    - istio-ingress/mesh-gateway
  http:
    - name: gateway-to-api
      match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: api.api.svc.cluster.local
